@@ -7,8 +7,10 @@ dnsmasq (2.81-1) unstable; urgency=low
    * Add note explaining that ENABLED is SYSV-init only. (closes: #914755)
    * Replace ash with dash in contrib/reverse-dns. (closes: #920224)
    * Move to libidn2. (closes: #932695)
+   * Fix RA problem with two interfaces on same net, but RA service on
+     only one of the interfaces. (closes: #949565)
 
- -- Simon Kelley <simon@thekelleys.org.uk>  Fri, 8 Apr 2019 17:14:15 +0000
+ -- Simon Kelley <simon@thekelleys.org.uk>  Mon, 27 Jan 2020 22:31:15 +0000
 
 dnsmasq (2.80-1) unstable; urgency=low
 
